--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,5 +16,15 @@
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="Theme.Widget.Button.Black" parent="">
+
+        <item name="android:textAppearanceButton">@style/TextAppearance.AppCompat.Display1</item>
+        <item name="android:colorControlHighlight">#000000</item>
+    </style>
+
+    <style name="Widget.Button.Black" parent="">
+        **<item name="android:theme">@style/Theme.Widget.Button.Black</item>
+        <item name="android:background">@drawable/round_corners_colured</item>
+    </style>
 
 </resources>
